Made a package with the code

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -535,7 +535,7 @@ d'adopter au besoin de nouvelles géométries.
 
 Maintenant dotés des matrices de rigité élémentaires $K^{[e]}$
 sur chaque élément, l'équation \ref{eq:general_problem} nous permet
-de connaitre les coefficients de $K$, la matrice de rigitité globale
+de connaitre les coefficients de $K$, la matrice de rigidité globale
 du problème.
 
 En effet, on a la correspondance suivante:
@@ -606,8 +606,8 @@ Voici les modifications à apporter à la matrice:
     \end{bmatrix}
 \end{equation}
 
-En nottant le membre de droite $F$ et $K^*$ la nouvelle
-matrice de rigitité prenant en compte les conditions aux limites,
+En notant le membre de droite $F$ et $K^*$ la nouvelle
+matrice de rigidité prenant en compte les conditions aux limites,
 il en découle simplement un système linéaire à résoudre:
 
 \begin{equation}
