Reduced img size

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -79,7 +79,7 @@ pour modéliser l'effet de pointe dans un champ électrostatique.\cite{Gossiaux}
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.7]{img/schema.png}
+    \includegraphics[width=0.8\textwidth]{img/schema.png}
     \caption{Modélisation de la pointe}
     \label{fig:pointe}
 \end{figure}
@@ -953,7 +953,7 @@ entre les solutions numérique (à gauche) et analytique (à droite).
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.5]{img/comparison.png}
+    \includegraphics[width=\textwidth]{img/comparison.png}
     \caption{Comparaison des résultats analytiques et numériques}
     \label{fig:analytic_vs_numeric}
 \end{figure}
@@ -967,7 +967,7 @@ relative $(V_{th} - V_{calc}) / V_{th}$ (en valeur absolue).
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.5]{img/difference.png}
+    \includegraphics[width=\textwidth]{img/difference.png}
     \caption{Différence entre les solutions analytiques et numériques}
     \label{fig:diff}
 \end{figure}
@@ -1012,7 +1012,7 @@ numériques (à gauche) et analytiques (à droite).
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.5]{img/comparison_elec.png}
+    \includegraphics[width=\textwidth]{img/comparison_elec.png}
     \caption{Comparaison des champs électriques analytiques et numériques}
     \label{fig:field_comparison}
 \end{figure}
@@ -1028,7 +1028,7 @@ de la pointe que pour le potentiel.
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.5]{img/difference_elec.png}
+    \includegraphics[width=0.9\textwidth]{img/difference_elec.png}
     \caption{Différence relative entre les champs électriques analytiques et numériques}
     \label{fig:field_diff}
 \end{figure}
@@ -1042,7 +1042,7 @@ diminuent. Et c'est bien ce qu'on observe en pratique.
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[scale=0.5]{img/difference_elec_7651.png}
+    \includegraphics[width=0.8\textwidth]{img/difference_elec_7651.png}
     \caption{Illustration de l'impact du nombre de nœuds}
     \label{fig:nodes_number_impact}
 \end{figure}
@@ -1068,7 +1068,7 @@ n'iront pas plus loin dans cette analyse.
 \section{Conclusion}
 
 D'après les résultats de la section \ref{sec:results}, nous pouvons
-dire que le code a un comportement statisfaisant vis-à-vis de la
+dire que le code a un comportement satisfaisant vis-à-vis de la
 situation simulée. De plus, il renvoie des valeurs cohérentes de
 potentiel et de champ électrique.
 
